Resolvendo erro imagem

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header>
-      <img src="/assets/img/logo.svg" alt="logo">
+      <img src="assets/img/logo.svg" alt="logo">
 
 
       <nav>
@@ -50,29 +50,29 @@
 
         <div class="conteiner-carousel">
           <div class="conteiner-items">
-          <img src="/assets/img/arrow-left.svg" alt="arrow-left" class="arrow">
+          <img src="assets/img/arrow-left.svg" alt="arrow-left" class="arrow">
 
           <div class="carousel-item">
-          <img class="item" src="/assets/img/kratos.svg" alt="Kratos">
+          <img class="item" src="assets/img/kratos.svg" alt="Kratos">
           <p class="item-nome">Kratos</p>
           </div>
 
           <div class="carousel-item">
-          <img class="item" src="/assets/img/atreus.svg" alt="Atreus">
+          <img class="item" src="assets/img/atreus.svg" alt="Atreus">
           <p class="item-nome">Atreus</p>
           </div>
 
           <div class="carousel-item">
-          <img class="item" src="/assets/img/freya.svg" alt="Freya">
+          <img class="item" src="assets/img/freya.svg" alt="Freya">
           <p class="item-nome">Freya</p>
           </div>
 
           <div class="carousel-item">
-          <img class="item" src="/assets/img/angrboda.svg" alt="Agrboda">
+          <img class="item" src="assets/img/angrboda.svg" alt="Agrboda">
           <p class="item-nome">Agrboda</p>
           </div>
 
-          <img src="/assets/img/arrow-right.svg" alt="arrow-right" class="arrow">
+          <img src="assets/img/arrow-right.svg" alt="arrow-right" class="arrow">
             </div>
           </div>
 
